# ConfidentialSolanaVoteProtocol

./: Anchor.toml  Arcium.toml  Cargo.toml  package-lock.json  package.json  readme.md  rust-toolchain  tsconfig.json
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-B341qDGd4ZS4i32hEwxrbgejaH16aMucsWzcsq2ebAUt.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/accounts/run/: 0.1  0.15  15.10  17.8  19.7  22.4  23.3  4.14  78.1  88.0  91.17
.anchor/test-ledger/accounts/snapshot/100/: 100.16  13.11  16.9  20.6  21.5  25.2  6.13  7.12  88.0
.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1761759332544416  LOG.old.1761761582267384  LOG.old.1761772631623563  LOG.old.1761801256928952  LOG.old.1761805043828532  LOG.old.1761810063398107  LOG.old.1761813205016883  LOG.old.1761822516114728  LOG.old.1761828061041093  LOG.old.1761830694584558  LOG.old.1761831895290749  LOG.old.1761844784133705  LOG.old.1761851965122879  LOG.old.1761853853912049  LOG.old.1761862575312189  LOG.old.1761862981959549  LOG.old.1762039662964908  LOG.old.1762045186168629  LOG.old.1762079592255923  LOG.old.1762082932134127  LOG.old.1762088071743846  LOG.old.1762092028978885  LOG.old.1762095029040967  LOG.old.1762095432890110  LOG.old.1762096341777025  LOG.old.1762097210572713  LOG.old.1762099983226493  LOG.old.1762100432632425  LOG.old.1762101514695152  LOG.old.1762105215448210  LOG.old.1762106711317681  LOG.old.1762106832145225  (+2 more)
.anchor/test-ledger/snapshot/100/: 100  status_cache
circuit/: Cargo.toml  lib.rs
circuit/src/: lib.rs
confidential-ixs/: Cargo.toml
confidential-ixs/src/: lib.rs  voting.rs
encrypted-ixs/: Cargo.toml  init_vote_stats.rs
encrypted-ixs/src/: lib.rs
programs/csvp-protocol/: Cargo.toml
programs/csvp-protocol/src/: Anchor.toml  entrypoint.rs  error.rs  instructions.rs  lib.rs  lib_1.rs  lib_2.rs  processor.rs  state.rs
programs/register-voters/: Cargo.toml
programs/register-voters/src/: Anchor.toml  lib.rs
src/: Cargo.toml  main.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1762073726315520  MANIFEST-000021
tests/: Anchor.toml  helpers.ts  run.bash  test.voting.ts  voting.ts
tsclient/: package-lock.json  package.json  tsconfig.json
tsclient/src/: arciumClient.ts  demo.ts  package.json  voteClient.ts
