[package]
name = "csvp-tally-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.0"
solana-sdk = "1.18.0"
solana-program = "1.18.0"
borsh = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arcium-sdk = "0.1.0"  # Предполагаемый SDK