[package]
name = "csvp-protocol"
version = "0.2.0"
description = "Confidential Solana Vote Protocol"
edition = "2021"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "2.0.0"
borsh = { version = "1.0.0", features = ["derive"] }
thiserror = "1.0.0"
num-derive = "0.3.0"
num-traits = "0.2.0"
anchor-lang = { version = "0.32.1", features = ["derive","init-if-needed"] }
# Используйте актуальные версии Arcium
arcium-client = { version = "0.3.0", default-features = false }
arcium-macros = { version = "0.3.0" }
arcium-anchor = { version = "0.3.0" }

[lib]
crate-type = ["cdylib", "lib"]