[package]
name = "register_voters"
version = "0.2.0"
description = "Register voters for Confidential Solana Vote Protocol"
edition = "2021"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
thiserror = "1.0.0"
num-derive = "0.3.0"
num-traits = "0.2.0"
anchor-lang = { version = "0.31.1", features = ["init-if-needed","derive"] }

[lib]
crate-type = ["cdylib", "lib"]